--- a/public/templates/users/login.html
+++ b/public/templates/users/login.html
@@ -1,14 +1,14 @@
 <div class="row">
     <div class="col-sm-4 col-sm-push-3 well">
         <h1>Login</h1>
-        <form name="loginForm" ng-submit="doLogin(loginForm)">
+        <form name="loginForm" ng-submit="doLogin()">
             <div class="form-group">
-                <input type="email" name="email" ng-model="login.username"
+                <input type="email" name="email" ng-model="email"
                 required placeholder="Enter your email address" class="form-control">
             </div>
 
             <div class="form-group">
-                <input type="password" name="password" ng-model="login.password"
+                <input type="password" name="password" ng-model="password"
                 required placeholder="Enter your password" class="form-control">
             </div>
 
